--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<meta charset="UTF-8">
 	<title>Página de Receita</title>
 	<link href="style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <div id="page">
 	
-	<img src="images/receita.jpg" alt="Receita">
+	<img src="assets/main-image.jpg" alt="Imagem de um Cupcake">
 	<main>
 		<section id="about">
 			<h1>
@@ -70,7 +73,9 @@
 	</main>
 </div>
 
-<footer></footer>
+<footer>
+	Feito com <img src="assets/Vector.svg" alt="Coração"> pela Guesser Software
+</footer>
 
 </body>
 </html>
